// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/EmailLink EmailLink 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #00BF8E;
  font-size: 1em;
}

.c1 a {
  color: #00BF8E;
}

.c2 {
  display: inline-block;
  padding-right: 0.5em;
  position: relative;
  top: 0.2em;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <a
      href="jose@juan.com"
    >
      <span
        className="c2"
      >
        <div />
      </span>
      <span>
        jose@juan.com
      </span>
    </a>
  </span>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/EmailLink EmailLink custom title 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #00BF8E;
  font-size: 1em;
}

.c1 a {
  color: #00BF8E;
}

.c2 {
  display: inline-block;
  padding-right: 0.5em;
  position: relative;
  top: 0.2em;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <a
      href="jose@juan.com"
    >
      <span
        className="c2"
      >
        <div />
      </span>
      <span>
        Jose email
      </span>
    </a>
  </span>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/EmailLink EmailLink no icon 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #00BF8E;
  font-size: 1em;
}

.c1 a {
  color: #00BF8E;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <a
      href="jose@juan.com"
    >
      <span>
        Jose email
      </span>
    </a>
  </span>
  <div
    className="c2"
  />
</div>
`;
